selfhost/test/typechecker/binary/coalesce_error.1.out
Error at %FILE_NAME%:2:6
Type mismatch
  |  a ?: "foo"
          ^
Expected: Int
but instead found: String
