selfhost/test/typechecker/binary/coalesce_error.1.abra
val a: Int? = 123
a ?: "foo"